# Multi-agent-DuckDB-SQL-Optimiser

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GITHUB_DEPLOYMENT.md  LICENSE  QUICK_DEPLOY.md  README.md  dev.sh  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  vercel.json  vite.config.ts
.github/workflows/: deploy.yml
api/: debug.py  health.py  index.py  optimize-sql.py  test.py
backend/: main.py  requirements.txt
backend/agents/: __init__.py  base_agent.py  explainer.py  optimizer_generator.py  orchestrator.py  query_analyzer.py  validator.py
src/: App.tsx  duckdbClient.ts  styles.css  vite.config.ts
