[project]
name = "sql-optimiser"
version = "0.1.0"
description = "Multi-Agent SQL Optimization Framework"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.2.0",
    "structlog>=23.2.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
